--- a/src/App.css
+++ b/src/App.css
@@ -1,42 +1,46 @@
-#root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
+.ui.menu .item img.logo {
+  margin-right: 1.5em;
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
+form.ui.segment.form {
+background-color: #F1F9FF;
+margin-top: 2em;
 }
 
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+form.form:after {
+content: '';
+display: block;
+height: 0;
+clear: both;
+visibility: hidden;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
+.votes {
+display: flex;
+align-items: center;
+justify-content: center;
+background-color: #E6E6E6;
+padding: 1em 0;
+border-radius: 5px;
 }
 
-.card {
-  padding: 2em;
+.ui.grid.posts {
+margin-top: 2em;
 }
 
-.read-the-docs {
-  color: #888;
+.meta {
+color: #9A9A9A
+}
+
+.ui.grid>.row>.column.votes {
+display: flex;
+}
+
+ul.ui.list li:before {
+content: '';
+}
+
+.voters {
+clear: both;
+width: 100%;
 }
