--- a/javascript/react-app/src/App.css
+++ b/javascript/react-app/src/App.css
@@ -1,42 +1,38 @@
-#root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
-}
+.navbar-brand--img { height: 50px; }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
-}
+.badge-notif { position: absolute; top: 1.2rem; margin-left: .7em; }
 
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
+/* Sidebar */
+.sidebar-sticky { position: -webkit-sticky; position: sticky; top: 48px; height: calc(100vh - 48px); padding-top: .5rem; overflow-x: hidden; overflow-y: auto; }
 
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
-}
+.sidebar .nav-link { font-weight: 300; color: #333; position: relative; display: block; padding: .5em 1em; text-decoration: none; }
 
-.card {
-  padding: 2em;
-}
+.sidebar .nav-link:hover { color: #007bff; }
 
-.read-the-docs {
-  color: #888;
+.sidebar .nav-link.active { color: #007bff; border-left: 3px solid #007bff; }
+
+.sidebar-heading { padding: 1rem; margin-top: 1rem; background-color: #eee; color: #7d7a7a; }
+
+.nav .nav { padding-left: 1em; background-color: #eee; display: none; }
+
+.nav .caret { -webkit-transition: transform 0.3s; -webkit-transition: -webkit-transform 0.3s; transition: -webkit-transform 0.3s; transition: transform 0.3s; transition: transform 0.3s, -webkit-transform 0.3s; }
+
+.nav .active .caret { -webkit-transform: rotate(180deg); transform: rotate(180deg); }
+
+/* Dashboard */
+.card-body h3 { font-size: 2.5rem; }
+
+.card-footer { color: #fff; text-decoration: none; }
+
+.card-footer:hover { color: #fff; text-decoration: none; }
+
+.card-collapsible .card-header { display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-pack: justify; -ms-flex-pack: justify; justify-content: space-between; -webkit-box-align: center; -ms-flex-align: center; align-items: center; }
+
+.card-collapsible .caret { -webkit-transition: transform 0.3s; -webkit-transition: -webkit-transform 0.3s; transition: -webkit-transform 0.3s; transition: transform 0.3s; transition: transform 0.3s, -webkit-transform 0.3s; }
+
+.card-collapsible .active { -webkit-transform: rotate(180deg); transform: rotate(180deg); }
+
+.home_content_img{
+    display: flex;
+    justify-content: center;
 }
